--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,30 +7,19 @@ services:
       POSTGRES_USER: ag
       POSTGRES_DB: questions_answers
     volumes:
-      - ./db/schema.sql:/docker-entrypoint-initdb.d/schema.sql
+      - ./schema.sql:/docker-entrypoint-initdb.d/schema.sql
       - qa_volume:/usr/share/app
     ports:
       - '5432:5432'
     healthcheck:
       test: "exit 0"
-  server:
-    image: server_questions:version5.0
-    restart: on-failure
-    environment:
-      DATABASE_URL: postgres://ag:secret@db:5432/questions_answers
-    depends_on:
-     db:
-      condition: service_healthy
-    ports:
-      - '4000:4000'
 volumes:
   qa_volume:
     driver: local
     driver_opts:
         o: bind
         type: none
-        device: /Users/ag/HR/SDC/QuestionsAnswersAPI/CSVFiles
+        device: /Users/ag/Desktop/CSV
 networks:
   default:
-    external:
-        name: sdc
+    name: sdc
